added lorem ipsum

--- a/styles/love.css
+++ b/styles/love.css
@@ -20,25 +20,27 @@ body {
   background-color: var(--dark-pink);
   filter: drop-shadow(0 0 90px var(--pink));
   position: fixed;
-  align-items: center;
   display: flex;
+  align-items: center;
   justify-content: center;
   z-index: 1;
-  width: 650px;
+  width: 700px;
   height: 350px;
   transform: scale(0);
   transition: 2s ease all;
+}
+.popup .content {
+  padding: 0;
+  margin: 10px 50px 10px;
   text-align: center;
   font-size: 12pt;
 }
-.popup .centered-list li {
-  text-align: left;
-  margin-left: 10%;
+.popup .content p {
+  text-align: justify;
 }
-.popup h1 {
+.popup .content h1 {
   font-style: italic;
   font-size: 30pt;
-  padding: 0;
   margin: 0;
 }
 
