--- a/styles/love.scss
+++ b/styles/love.scss
@@ -21,30 +21,32 @@ body {
   filter: drop-shadow(0 0 90px var(--pink));
 
   position: fixed;
-  align-items: center;
   display: flex;
+  align-items: center;
   justify-content: center;
   
   z-index: 1;
-  width: 650px;
+  width: 700px;
   height: 350px;
 
   transform: scale(0);
   transition: 2s ease all;
 
-  text-align: center;
-  font-size: 12pt;
-
-  .centered-list li {
-    text-align: left;
-    margin-left: 10%;
-  }
-
-  h1 {
-    font-style: italic;
-    font-size: 30pt;
+  .content {
     padding: 0;
-    margin: 0;
+    margin: 10px 50px 10px;
+    text-align: center;
+    font-size: 12pt;
+
+    p {
+      text-align: justify;
+    }
+
+    h1 {
+      font-style: italic;
+      font-size: 30pt;
+      margin: 0;
+    }
   }
 }
 
